# bigquery-dbt

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  Dockerfile-dev  Dockerfile.dbt  Dockerfile.prod  Makefile  README.md  compose.airflow.yml  compose.dbt.dev.yml  compose.dbt.prod.yml  compose.dbt.yml  dbt_project.yml  docker-compose.yml  packages.yml  pyproject.toml  requirements.txt
.archived/: README.md
.astro/: config.yaml
.github/workflows/: serve-dbt-docs.yml  sync-main-to-hotflix.yml  sync-main-to-stg.yml
analyses/: debug_variables.sql
api/: README.md  models.py  server.py  settings.py
config/: .user.yml  profiles.yml
dags/: init_dbt_dag.py  run_dbt.py
dags/common/: paths.py
dbt/: dbt_project.yml
macros/: smart_materialization.sql  table_or_view.sql  unpivot_metrics.sql
models/bronze/: raw_seed_calendar.sql  raw_seed_products.sql  raw_seed_regions.sql  raw_seed_stores.sql  schema.yml
models/common/: dim_dates.sql
models/gold/: dim_calendar.sql  dim_customers.sql  dim_products.sql  dim_regions.sql  dim_stores.sql  fact_returns.sql  fact_transactions.sql
models/metadata/: table_metrics.sql
models/monitoring/: table_metrics.sql  user_metrics.sql
models/raw/: raw_seed_customers.sql  raw_seed_returns.sql  raw_seed_transactions.sql
models/silver/: schema.yml  stg_seed_calendar.sql  stg_seed_customers.sql  stg_seed_products.sql  stg_seed_regions.sql  stg_seed_returns.sql  stg_seed_stores.sql  (+1 more)
scripts/: generate_api_key.py  generate_fernet_key.py  pyproject.toml
seeds/: Calendar.csv  Customers.csv
(+37 files in other folders)
