[project]
name = "bigquery-dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery>=1.9.1",
    "fastapi[all]>=0.115.12",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "uvicorn[standard]>=0.34.2",
]

[tool.uv.workspace]
members = ["scripts"]
